# codeql

php/: Makefile  README.md  codeql-extractor.yml
php/doc/: HOWTO.md
php/downgrades/: qlpack.yml
php/downgrades/initial/: php.dbscheme
php/extractor/: Cargo.toml  rust-toolchain.toml
php/extractor/src/: autobuilder.rs  extractor.rs  generator.rs
php/ql/lib/codeql/php/ast/internal/: TreeSitter.qll
php/scripts/: create-extractor-pack.ps1  create-extractor-pack.sh
php/tools/: qltest.cmd  qltest.sh
