[package]
name = "codeql-extractor-php"
description = "CodeQL PHP extractor"
version = "0.1.0"
authors = ["GitHub"]
edition = "2018"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = ">= 0.20, < 0.21"
tree-sitter-php = { git = "https://github.com/tree-sitter/tree-sitter-php.git", rev = "33e30169e6f9bb29845c80afaa62a4a87f23f6d6" }
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
rayon = "1.5.0"
regex = "1.7.1"
encoding = "0.2"
lazy_static = "1.4.0"
codeql-extractor = { path = "../../shared/tree-sitter-extractor" }
